fix(css): apply bottom safe spacing to shared app shells

--- a/web/src/styles/_mixins.scss
+++ b/web/src/styles/_mixins.scss
@@ -5,6 +5,8 @@
   display: flex;
   flex-direction: column;
   background-color: var(--color-background);
+  box-sizing: border-box;
+  padding-bottom: var(--phone-bottom-ui-gap, 0px);
 }
 
 @mixin custom-scrollbar {
